RESOLVED FIXED70669
Lookup does not work on text using web fonts in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=70669
Summary Lookup does not work on text using web fonts in WebKit2
Sam Weinig
Reported 2011-10-21 20:51:26 PDT
Lookup does not work on text using web fonts in WebKit2
Attachments
Patch (1.84 KB, patch)
2011-10-21 20:53 PDT, Sam Weinig
andersca: review+
Sam Weinig
Comment 1 2011-10-21 20:53:13 PDT
Sam Weinig
Comment 2 2011-10-21 20:53:45 PDT
* STEPS TO REPRODUCE 1. Navigate to <http://www.alistapart.com/d/cssatten/poen.html> 2. Control-click any word 3. Choose Look Up “…” from the contextual menu * RESULTS Nothing happens. * REGRESSION Works in WebKit1, not in WebKit2.
Sam Weinig
Comment 3 2011-10-21 20:54:59 PDT
Note You need to log in before you can comment on or make changes to this bug.