Lookup does not work on text using web fonts in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=70669 <rdar://problem/10147441>

Reviewed by Anders Carlsson.

* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::performDictionaryLookupForRange):
If the font for the range is web font (and therefore no NSFont is
available), use the system font of the same size. While not great,
it approximates what WebKit1 does.


Canonical link: https://commits.webkit.org/86864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98187 268f45cc-cd09-0410-ab3c-d52691b4dbfc